chore:upgrade sdk

--- a/package.json
+++ b/package.json
@@ -106,6 +106,6 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "skylar-goerli-swap-sdk": "^1.0.0"
+    "skylar-goerli-swap-sdk": "1.0.1"
   }
 }
